# Numeric-Simulation-Laboratory

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  version_config.h.in
Assignment/: LSN_Exercises_01.ipynb  LSN_Exercises_04.ipynb
Assignments/: LSN_Exercises_03.ipynb  LSN_Exercises_08.ipynb  LSN_Exercises_09.ipynb  LSN_Exercises_10.ipynb  LSN_Exercises_11.ipynb  LSN_Exercises_12.ipynb
JupyterNotebooks/: Exercises_01.ipynb  Exercises_02.ipynb  Exercises_03.ipynb  Exercises_04.ipynb  Exercises_05.ipynb  Exercises_06.ipynb  Exercises_07.ipynb  Exercises_08.ipynb  Exercises_09.ipynb  Exercises_10.ipynb  Exercises_11.ipynb
JupyterNotebooks/Exercises_11/: Exercise_11.1.ipynb  Exercise_11.2.ipynb  Exercise_11.3.ipynb
JupyterNotebooks/Exercises_12/: Exercise_12.1.ipynb  Exercises_12.2_12.3.ipynb
Lesson_01/: Exercise_01.2.cpp  Exercise_01.3.cpp  Library_01.h
Lesson_02/: CMakeLists.txt  Exercise_02.2.cpp  Library_02.h
Lesson_02/.ipynb_checkpoints/: Exercises_02-checkpoint.ipynb
Lesson_03/: Exercise_03.1.cpp  Library_03.cpp  Library_03.h
Lesson_04/: CMakeLists.txt  Exercise_04.1.cpp  Library_04.h
Lesson_04/input/: input.liquid  input.solid
Lesson_04/input-output/: input.gas  input.solid
Lesson_04/input-output/eq/gas/: input.gas
Lesson_04/input-output/eq/solid/: input.solid
Lesson_04/input/eq/liquid/: input.liquid
Lesson_04/input/eq/solid/: input.solid
Lesson_05/: CMakeLists.txt  Exercise_05.1.cpp  Library_05.h
Lesson_06/: CMakeLists.txt  Exercise_06.1.cpp  Library_06.h  clean.sh  run_all_temp.sh
Lesson_07/: CMakeLists.txt  Exercise_07.1.cpp  Library_07.h
Lesson_07/input-output/: input.gas  input.liquid  input.solid
Lesson_07/input-output/eq/gas/: input.gas
Lesson_07/input-output/eq/liquid/: input.liquid
Lesson_07/input-output/eq/solid/: input.solid
Lesson_08/: CMakeLists.txt  Exercise_08.1.cpp  Exercise_08.2.cpp  Library_08.cpp  Library_08.h  main.cpp
Lesson_09/: CMakeLists.txt  Chromosome_test.cpp  Chromosome_test.h  Exercise_09.1.cpp  Individual_test.cpp  Individual_test.h  Library_09.cpp  Library_09.h  create_gif.py
Lesson_10/: CMakeLists.txt  Exercise_10.1.cpp  Library_10.cpp  Library_10.h  create_gif.py
Lezione_01/: CMakeLists.txt  Exercise_01.1.cpp  Exercise_01.2.cpp  Exercises_01.ipynb  Library_01.cpp
Lezione_01/.ipynb_checkpoints/: Exercises_01-checkpoint.ipynb  LSN_Exercises_01-checkpoint.ipynb
Lezione_02/: Exercise_02.1.cpp  Exercise_02.2.cpp  Exercises_02.ipynb  Library_02.cpp  sphere.py
Lezione_02/.ipynb_checkpoints/: Exercises_01-checkpoint.ipynb  Exercises_02-checkpoint.ipynb
Lezione_03/: CMakeLists.txt  Exercise_03.1.cpp  Library_03.h
Lezione_03/.ipynb_checkpoints/: Exercises_03-checkpoint.ipynb
Lezione_04/: Library_04.h
Lezione_04/.ipynb_checkpoints/: LSN_Exercises_04-checkpoint.ipynb
Lezione_04/input/eq/gas/: input.gas
Lezione_05/: Exercise_05.1.cpp  Library_05.h  clean.sh
Lezione_06/: Exercise_06.1.cpp  LSN_Exercises_06.ipynb  run_all_temp.sh
random-library/: CMakeLists.txt  config.final  random.cpp  random.h  seed.in
